[package]
name = "overwhelement"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2"

[[example]]
name = "pipeline"
path = "examples/pipeline_diagram.rs"

[[example]]
name = "plane-viewport"
path = "examples/plane_viewport.rs"

[[example]]
name = "multiple-viewports"
path = "examples/multiple_viewports.rs"