[package]
name = "overwhelement"
version = "0.1.0"
edition = "2024"

[dependencies]

[dev-dependencies]
image = "0.25"
imageproc = "0.25"
rusttype = "0.9"
ab_glyph = "0.2"
terminal_size = "0.4"

[[example]]
name = "pipeline"
path = "examples/readme_images/pipeline_diagram.rs"

[[example]]
name = "plane-viewport"
path = "examples/readme_images/plane_viewport.rs"

[[example]]
name = "multiple-viewports"
path = "examples/readme_images/multiple_viewports.rs"

[[example]]
name = "viewer"
path = "examples/image_viewer/viewer.rs"


